--- a/仿亚马逊主页/amazon.html
+++ b/仿亚马逊主页/amazon.html
@@ -67,8 +67,7 @@
 		</div>
 		<div class="nav-main">
 			<div class="nav-left">
-				<p>浏览</p>
-				<p>全部分类列表</p>
+				<span>浏览<br/>全部分类</span>
 			</div>
 			<div class="nav-fill">
 				<a href="#">我的亚马逊</a>
@@ -78,6 +77,11 @@
 				<a href="#">海外购</a>
 				<a href="#">帮助</a>
 				<a href="#">In English</a>
+			</div>
+			<div class="nav-right">
+				<span>您好，登录<br/>我的账户</span>
+				<span>购物车</span>
+				<span>心愿单</span>
 			</div>
 		</div>
 	</header>
