--- a/仿亚马逊主页/amazon.html
+++ b/仿亚马逊主页/amazon.html
@@ -67,7 +67,26 @@
 		</div>
 		<div class="nav-main">
 			<div class="nav-left">
-				<span>浏览<br/>全部分类</span>
+				<div>
+					<span>浏览<br/>全部分类</span>
+				</div>
+				<div class="classes">
+					<a href="#">kindle电子书阅读器</a>
+					<a href="#">fire平板电脑</a>
+					<a href="#">亚马逊海外购</a>
+					<a href="#">图书</a>
+					<a href="#">音像</a>、<a href="#">软件</a>
+					<a href="#">手机</a>、<a href="#">摄影</a>、<a href="#">数码</a>
+					<a href="#">家居</a>、<a href="#">厨具</a>、<a href="#">家装</a>
+					<a href="#">电脑</a>、<a href="#">办公</a>
+					<a></a>
+					<a></a>
+					<a></a>
+					<a></a>
+					<a></a>
+					<a></a>
+					<a></a>
+				</div>
 			</div>
 			<div class="nav-fill">
 				<a href="#">我的亚马逊</a>
