--- a/仿亚马逊主页/amazon.html
+++ b/仿亚马逊主页/amazon.html
@@ -79,13 +79,16 @@
 					<a href="#">手机</a>、<a href="#">摄影</a>、<a href="#">数码</a>
 					<a href="#">家居</a>、<a href="#">厨具</a>、<a href="#">家装</a>
 					<a href="#">电脑</a>、<a href="#">办公</a>
-					<a></a>
-					<a></a>
-					<a></a>
-					<a></a>
-					<a></a>
-					<a></a>
-					<a></a>
+					<a href="#">家用电器</a>
+					<a href="#">美妆</a>、<a href="#">个护健康</a>
+					<a href="#">食品</a>、<a href="#">酒水</a>、<a href="#">生鲜</a>
+					<a href="#">玩具</a>、<a href="#">母婴</a>、<a href="#">家庭会员</a>
+					<a href="#">运动户外</a>
+					<a href="#">服装</a>、<a href="#">鞋靴</a>、<a href="#">箱包</a>
+					<a href="#">钟表</a>、<a href="#">首饰</a>
+					<a href="#">汽车用品</a>
+					<a href="#">亚马逊 Cloud Drive</a>
+					<a href="#">全部商品分类</a>
 				</div>
 			</div>
 			<div class="nav-fill">
