--- a/仿亚马逊主页/amazon.html
+++ b/仿亚马逊主页/amazon.html
@@ -90,6 +90,19 @@
 					<a href="#">亚马逊 Cloud Drive</a>
 					<a href="#">全部商品分类</a>
 				</div>
+				<div>
+					<a href="#">kindle电子书阅读器</a>
+					<a href="#">电子书阅读器</a><a href="#">kindle</a>|<a href="#">kindle paperwhite</a>|<a href="#">kindle vayage</a>|<a href="#">kindle配件</a>
+					<a href="#">kindle电子书</a><a href="#">排行榜</a>|<a href="#">今日特价书</a>|<a href="#">进口原版</a>|<a href="#">小说</a>|<a href="#">经济管理</a>|<a href="#">杂志</a>|<a href="#">文学</a>
+					<a href="#">免费书</a>|<a href="#">少儿</a>|<a href="#">社科人文</a>
+					<a href="#">免费阅读软件</a><a href="#">安卓版</a>|<a href="#">iPhone版</a>|<a href="#">iPad版</a>|<a href="#">PC版</a>|<a href="#">Mac版</a>|<a href="#">使用攻略</a>
+					<a href="#">管理内容和设备</a><a href="#">管理我的内容</a>|<a href="#">管理我的设备</a>|<a href="#">设置付款方式</a>
+					<a href="#">kindle帮助</a><a href="#">常见问题</a>|<a href="#">帮助视频</a>
+				</div>
+				<div>
+					<a href="#">Fire平板电脑</a>
+					<a href="#">Fire平板电脑</a><a href="#">Fire HD7</a>|
+				</div>
 			</div>
 			<div class="nav-fill">
 				<a href="#">我的亚马逊</a>
