--- a/仿亚马逊主页/amazon.html
+++ b/仿亚马逊主页/amazon.html
@@ -98,10 +98,30 @@
 					<a href="#">免费阅读软件</a><a href="#">安卓版</a>|<a href="#">iPhone版</a>|<a href="#">iPad版</a>|<a href="#">PC版</a>|<a href="#">Mac版</a>|<a href="#">使用攻略</a>
 					<a href="#">管理内容和设备</a><a href="#">管理我的内容</a>|<a href="#">管理我的设备</a>|<a href="#">设置付款方式</a>
 					<a href="#">kindle帮助</a><a href="#">常见问题</a>|<a href="#">帮助视频</a>
+					<a href="#"><img src="image/class-kindle.png"></a>
 				</div>
 				<div>
 					<a href="#">Fire平板电脑</a>
-					<a href="#">Fire平板电脑</a><a href="#">Fire HD7</a>|
+					<a href="#">Fire平板电脑</a><a href="#">Fire HD7</a>|<a href="#">Fire HDX</a>|<a href="#">Fire HDX8.9</a>|<a href="#">Fire 配件</a>
+					<a href="#">kindle电子书</a><a href="#">排行榜</a>|<a href="#">今日特价书</a>|<a href="#">进口原版</a>|<a href="#">小说</a>|<a href="#">经济管理</a>|<a href="#">杂志</a>|<a href="#">文学</a>
+					<a href="#">免费阅读软件</a><a href="#">安卓版</a>|<a href="#">iPhone版</a>|<a href="#">iPad版</a>|<a href="#">PC版</a>|<a href="#">Mac版</a>|<a href="#">使用攻略</a>
+					<a href="#">Fire帮助</a><a href="#">常见问题</a>|<a href="#">帮助视频</a>
+					<a href="#"><img src="image/class-fire.png"></a>
+				</div>
+				<div>
+					<a href="#">亚马逊海外购</a>
+					<a href="#">母婴用品</a><a href="#">奶粉</a>|<a href="#">喂养用具</a>|<a href="#">安全防护</a>|<a href="#">外出用品</a>|<a href="#">童车推车</a>
+					<a href="#">玩具</a><a href="#">婴幼玩具</a>|<a href="#">电子玩具</a>|<a href="#">拼插玩具</a>|<a href="#">动漫玩具</a>
+					<a href="#">服装服饰</a><a href="#">男装</a>|<a href="#">女装</a>|<a href="#">休闲装</a>|<a href="#">内衣家居服</a>|<a href="#">婴幼儿服</a>
+					<a href="#">鞋靴</a><a href="#">男鞋</a>|<a href="#">女鞋</a>|<a href="#">男童鞋</a>|<a href="#">女童鞋</a>
+					<a href="#">皮具箱包</a><a href="#">单肩包</a>|<a href="#">钱包</a>|<a href="#">双肩包</a>|<a href="#">皮带</a>
+					<a href="#">运动户外</a><a href="#">运动服饰</a>|<a href="#">跑步</a>|<a href="#">露营</a>|<a href="#">篮球</a>|<a href="#">健身训练</a>
+					<a href="#">美容化妆</a><a href="#">面部护肤</a>|<a href="#">彩妆</a>|<a href="#">美发护发</a>|<a href="#">身体护理</a>|<a href="#">工具配件</a>
+					<a href="#">个护健康</a><a href="#">眼睛护理</a>|<a href="#">保健品</a>|<a href="#">剃须用品</a>|<a href="#">口腔护理</a>
+					<a href="#">厨具</a><a href="#">水具</a>|<a href="#">酒具</a>
+					<a href="#">进口直采</a><a href="#">食品</a>|<a href="#">酒水</a>|<a href="#">服饰箱包</a>|<a href="#">鞋靴</a>|<a href="#">珠宝首饰</a>|<a href="#">数码影音</a>
+					<a href="#">海外购-闪购</a><a href="#">个护健康</a>|<a href="#">母婴</a>|<a href="#">自然之宝</a>|<a href="#">GNC</a>|<a href="#">美赞臣</a>
+					<a href="#"><img src="image/class-abroad.jpg"></a>
 				</div>
 			</div>
 			<div class="nav-fill">
