--- a/snake/snake.html
+++ b/snake/snake.html
@@ -7,15 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="snake.css">
 </head>
 <body>
-	<div class="score">score:<span></span></div>
 	<div class="main">
-		<canvas id="snake" width="800x" height="450px"></canvas>
-	</div>
-	<div class="begin"><div></div></div>
-	<div class="list">
-		<div class="reload"></div>
-		<div class="pause"></div>
-		<div class="music"></div>
+		<div class="score">score:<span></span></div>
+		<div class="pane">
+			<canvas id="snake" width="800x" height="450px"></canvas>
+		</div>
+		<div class="begin"><div></div></div>
+		<div class="list">
+			<div class="reload"></div>
+			<div class="pause"></div>
+			<div class="music"></div>
+		</div>
 	</div>
 </body>
 </html>
