--- a/snake/snake.html
+++ b/snake/snake.html
@@ -4,7 +4,7 @@
 	<title>贪吃蛇</title>
 	<meta name="key" content="贪吃蛇">
 	<meta name="author" content="guoxkay">
-	<link rel="stylesheet" type="text/css" href="snake.css">
+	<link rel="stylesheet" type="text/css" href="css/snake.css">
 </head>
 <body>
 	<div class="main">
@@ -14,9 +14,9 @@
 			<canvas id="snake" width="800x" height="450px"></canvas>
 		</div>
 		<div class="list">
-			<div class="reload"></div>
-			<div class="pause"></div>
-			<div class="music"></div>
+			<div class="reload"><img src="image/reload.png"></div>
+			<div class="pause"><img id="begin" src="image/begin.png"><img id="pause" src="image/pause.png"></div>
+			<div class="music"><img id="music" src="image/music.png"><img id="nomusic" src="image/nomusic.png"></div>
 		</div>
 	</div>
 </body>
