--- a/snake/snake.html
+++ b/snake/snake.html
@@ -11,7 +11,9 @@
 		<div class="score"><span>score:<span></span></span><span>highest score:<span></span></span></div>
 		<div class="pane">
 			<div class="begin"><div></div></div>
-			<canvas id="snake" width="800x" height="450px"></canvas>
+			<canvas id="snake" width="780px" height="450px"></canvas>
+			<div class="died">YOU DIED</div>
+			<div></div>
 		</div>
 		<div class="list">
 			<div class="reload"><img src="image/reload.png"></div>
