--- a/snake/snake.html
+++ b/snake/snake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="main">
-		<div class="score"><span>score:<span></span></span><span>highest score:<span></span></span></div>
+		<div class="score"><span>score:<span></span></span><div class="speed"><div></div><span></span><div></div></div><span>highest score:<span></span></span></div>
 		<div class="pane">
 			<div class="begin"><div></div></div>
 			<canvas id="snake" width="780px" height="450px"></canvas>
