--- a/snake/snake.html
+++ b/snake/snake.html
@@ -3,6 +3,7 @@
 <head>
 	<title>贪吃蛇</title>
 	<meta name="key" content="贪吃蛇">
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 	<meta name="author" content="guoxkay">
 	<link rel="stylesheet" type="text/css" href="css/snake.css">
 </head>
