--- a/block breaker/index.html
+++ b/block breaker/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-		<canvas height="630px" width="630px"></canvas>
+		<canvas height="630px" width="630px" id="c"></canvas>
 	</div>
 	<script type="text/javascript" src="js/js.js"></script>
 </body>
