--- a/block breaker/index.html
+++ b/block breaker/index.html
@@ -8,6 +8,9 @@
 	<div>
 		<canvas height="630px" width="630px" id="c"></canvas>
 	</div>
+	<p>
+		socre : <span id="score"><span>
+	</p>
 	<script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
